03.composition/src/test/resources/de/monticore/gettingstarted/simplejava/invalid/ComplicatedWrongAssignment.java
package de.monticore.gettingstarted.simplejava.invalid;

class ComplicatedWrongAssignment {

  int a = 3/7*(4+"Foo")

}
